--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Publish
 
 on:
   push:
@@ -9,9 +9,10 @@ on:
 
 jobs:
 
-  publish:
-    name: Publish for ${{ matrix.os }}
+  build:
     runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
 
     - name: Set up Go
       uses: actions/setup-go@v2
