--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,9 @@ jobs:
       with:
         go-version: 1.15
 
+    - name: Install Fyne bundler
+      run: go get fyne.io/fyne/v2/cmd/fyne
+
     - name: Create directories
       run: mkdir -p releases
 
