--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,6 +14,9 @@ jobs:
       with:
         go-version: 1.15
 
+    - name: Install dependencies
+      run: sudo apt-get install libx11-dev
+
     - name: Build
       run: go build -v ./...
 
