--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
         go-version: 1.15
 
     - name: Install dependencies
-      run: sudo apt-get install libx11-dev
+      run: sudo apt-get install xorg-dev
 
     - name: Build
       run: go build -v ./...
