--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,13 +20,10 @@ jobs:
         go-version: 1.15
 
     - name: Install dependencies
-      run: sudo apt-get install libx11-dev
+      run: sudo apt-get install xorg-dev
 
     - name: Install Fyne bundler
       run: go get fyne.io/fyne/v2/cmd/fyne
-
-    - name: Create directories
-      run: mkdir -p releases
 
     - name: Build Linux Package
       run: fyne package -os linux -icon icon.png
