--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
       run: go get fyne.io/fyne/v2/cmd/fyne
 
     - name: Build Linux Package
-      run: fyne package -os linux -icon icon.png
+      run: cd releases && fyne package -os linux -icon ../icon.png -sourceDir ..
 
     - name: Release Linux Package
       uses: svenstaro/upload-release-action@v2
@@ -37,7 +37,7 @@ jobs:
         tag: ${{ github.ref }}
 
     - name: Build MacOS Package
-      run: fyne package -os darwin -icon icon.png
+      run: cd releases && fyne package -os darwin -icon ../icon.png -sourceDir ..
 
     - name: Release MacOS Package
       uses: svenstaro/upload-release-action@v2
@@ -48,7 +48,7 @@ jobs:
         tag: ${{ github.ref }}
 
     # - name: Build Windows Package
-    #   run: fyne package -os windows -icon icon.png
+    #  run: cd releases && fyne package -os windows -icon ../icon.png -sourceDir ..
 
     # - name: Release Windows Package
     #   uses: svenstaro/upload-release-action@v2
