--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 
 # Test binary, built with `go test -c`
 *.test
-impallette
+imgpalette
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
