--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,6 +60,18 @@ jobs:
     #     asset_name: imgpalette.exe
     #     tag: ${{ github.ref }}
 
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body: |
+                Release body
+        prerelease: true
+        
     - name: List files
       run: ls -alh
     - name: Release with assets
